--- a/web/sites/mobile-zedbet/config/sync/views.view.promotions.yml
+++ b/web/sites/mobile-zedbet/config/sync/views.view.promotions.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - block.block.languagedropdownswitcher_2
     - field.storage.node.field_product_category
     - field.storage.node.field_promo_availability
     - node.type.promotion
@@ -514,6 +515,7 @@ display:
         fields: false
         filters: false
         filter_groups: false
+        header: false
       filters:
         status:
           value: '1'
@@ -670,6 +672,20 @@ display:
         weight: 10
         context: '0'
         menu_name: admin
+      header:
+        entity_block:
+          id: entity_block
+          table: views
+          field: entity_block
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: true
+          target: languagedropdownswitcher_2
+          view_mode: default
+          bypass_access: false
+          plugin_id: entity
     cache_metadata:
       max-age: 0
       contexts:
