Change log level for webcomposer_monolog.
Default level is debug which creates a lot of
noise in the log file.

--- a/web/modules/custom/webcomposer_monolog/webcomposer_monolog.services.yml
+++ b/web/modules/custom/webcomposer_monolog/webcomposer_monolog.services.yml
@@ -7,4 +7,4 @@ parameters:
 services:
   monolog.handler.stream:
     class: Monolog\Handler\StreamHandler
-    arguments: ['/var/log/cms/drupal.log']
+    arguments: ['/var/log/cms/drupal.log', 'monolog.level.warning']
