WEBSITE-962-WEBSITE-898-API-Integration

--- a/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
@@ -26,3 +26,5 @@ game_categories: 0
 game_categories_message: 'Term @term already exists in vocabulary @vocabulary.'
 page_content: 0
 page_content_message: 'Term @term already exists in vocabulary @vocabulary.'
+tournament_types: 0
+tournament_types_message: 'Term @term already exists in vocabulary @vocabulary.'
