--- a/web/sites/ptplus/config/sync/core.entity_form_display.tournament_api.tournament_api.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.tournament_api.tournament_api.default.yml
@@ -7,9 +7,11 @@ dependencies:
     - field.field.tournament_api.tournament_api.field_banner_image_landscape
     - field.field.tournament_api.tournament_api.field_platform
     - field.field.tournament_api.tournament_api.field_status
+    - field.field.tournament_api.tournament_api.field_status_board
     - field.field.tournament_api.tournament_api.field_title
     - field.field.tournament_api.tournament_api.field_tournament_end_date
     - field.field.tournament_api.tournament_api.field_tournament_start_date
+    - field.field.tournament_api.tournament_api.field_type_board
     - image.style.thumbnail
   module:
     - datetime
@@ -29,7 +31,7 @@ content:
     type: image_image
     region: content
   field_banner_image_landscape:
-    weight: 4
+    weight: 6
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -43,7 +45,13 @@ content:
     type: options_select
     region: content
   field_status:
-    weight: 7
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_status_board:
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -57,16 +65,22 @@ content:
     type: string_textfield
     region: content
   field_tournament_end_date:
-    weight: 6
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_tournament_start_date:
-    weight: 5
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_type_board:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   langcode:
     type: language_select
@@ -76,7 +90,7 @@ content:
       include_locked: true
     third_party_settings: {  }
   translation:
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
