--- a/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
@@ -7,9 +7,11 @@ dependencies:
     - field.field.tournament_api.tournament_api.field_banner_image_landscape
     - field.field.tournament_api.tournament_api.field_platform
     - field.field.tournament_api.tournament_api.field_status
+    - field.field.tournament_api.tournament_api.field_status_board
     - field.field.tournament_api.tournament_api.field_title
     - field.field.tournament_api.tournament_api.field_tournament_end_date
     - field.field.tournament_api.tournament_api.field_tournament_start_date
+    - field.field.tournament_api.tournament_api.field_type_board
   module:
     - datetime
     - options
@@ -61,6 +63,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_status_board:
+    weight: 10
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_title:
     weight: 2
     label: above
@@ -86,6 +95,13 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_type_board:
+    weight: 9
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   name:
     label: above
