--- a/web/sites/ptplus/config/sync/views.view.tournament_banners.yml
+++ b/web/sites/ptplus/config/sync/views.view.tournament_banners.yml
@@ -7,9 +7,11 @@ dependencies:
     - field.storage.tournament_api.field_banner_image
     - field.storage.tournament_api.field_platform
     - field.storage.tournament_api.field_status
+    - field.storage.tournament_api.field_status_board
     - field.storage.tournament_api.field_title
     - field.storage.tournament_api.field_tournament_end_date
     - field.storage.tournament_api.field_tournament_start_date
+    - field.storage.tournament_api.field_type_board
   module:
     - datetime
     - draggableviews
@@ -1484,6 +1486,130 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_type_board:
+          id: field_type_board
+          table: tournament_api__field_type_board
+          field: field_type_board
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_status_board:
+          id: field_status_board
+          table: tournament_api__field_status_board
+          field: field_status_board
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         field_platform_value:
           id: field_platform_value
@@ -1620,6 +1746,8 @@ display:
       tags:
         - 'config:field.storage.tournament_api.field_banner_image'
         - 'config:field.storage.tournament_api.field_platform'
+        - 'config:field.storage.tournament_api.field_status_board'
         - 'config:field.storage.tournament_api.field_title'
         - 'config:field.storage.tournament_api.field_tournament_end_date'
         - 'config:field.storage.tournament_api.field_tournament_start_date'
+        - 'config:field.storage.tournament_api.field_type_board'
