--- a/web/sites/zedbet/config/sync/views.view.webcomposer_slider_ver2.yml
+++ b/web/sites/zedbet/config/sync/views.view.webcomposer_slider_ver2.yml
@@ -294,24 +294,24 @@ display:
           entity_type: webcomposer_slider_v2_entity
           entity_field: langcode
           plugin_id: language
-        field_title_value:
-          id: field_title_value
-          table: webcomposer_slider_v2_entity__field_title
-          field: field_title_value
+        field_product_target_id_1:
+          id: field_product_target_id_1
+          table: webcomposer_slider_v2_entity__field_product
+          field: field_product_target_id
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '='
-          value: ''
+          operator: or
+          value: {  }
           group: 1
           exposed: true
           expose:
-            operator_id: field_title_value_op
-            label: Title
+            operator_id: field_product_target_id_1_op
+            label: 'Product (field_product)'
             description: ''
             use_operator: false
-            operator: field_title_value_op
-            identifier: title
+            operator: field_product_target_id_1_op
+            identifier: product
             required: false
             remember: false
             multiple: false
@@ -320,43 +320,6 @@ display:
               anonymous: '0'
               administrator: '0'
               e: '0'
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: string
-        langcode_2:
-          id: langcode_2
-          table: webcomposer_slider_v2_entity_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
             reduce: false
           is_grouped: false
           group_info:
@@ -370,9 +333,13 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: webcomposer_slider_v2_entity
-          entity_field: langcode
-          plugin_id: language
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: product
+          hierarchy: true
+          error_message: true
+          plugin_id: taxonomy_index_tid
       defaults:
         filters: false
         filter_groups: false
@@ -398,8 +365,23 @@ display:
           order: ASC
           exposed: false
           expose:
-            label: ''
+            label: 'DraggableViews Weight'
           plugin_id: standard
+        changed:
+          id: changed
+          table: webcomposer_slider_v2_entity_field_data
+          field: changed
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: webcomposer_slider_v2_entity
+          entity_field: changed
+          plugin_id: date
       style:
         type: table
         options:
@@ -1016,6 +998,7 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - user
         - user.permissions
       tags:
         - 'config:field.storage.webcomposer_slider_v2_entity.field_banner_image'
@@ -1140,9 +1123,6 @@ display:
         operator: OR
         groups:
           1: AND
-          2: AND
-          3: AND
-          4: AND
     cache_metadata:
       max-age: -1
       contexts:
