--- a/web/sites/mobile-live-dealer/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/mobile-live-dealer/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_currency
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_external_game_id
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_lobby
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_platform
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
@@ -133,6 +134,7 @@ third_party_settings:
       children:
         - field_slider_game_provider
         - field_slider_game_code
+        - field_external_game_id
         - field_table_id
         - field_game_platform
         - field_slider_enable_game_launch
@@ -321,6 +323,14 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_external_game_id:
+    weight: 17
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_launching:
     weight: 3
     settings: {  }
@@ -328,14 +338,14 @@ content:
     type: options_select
     region: content
   field_game_lobby:
-    weight: 21
+    weight: 22
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_game_platform:
-    weight: 18
+    weight: 19
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -545,7 +555,7 @@ content:
     type: text_textfield
     region: content
   field_slider_enable_game_launch:
-    weight: 19
+    weight: 20
     settings:
       display_label: true
     third_party_settings: {  }
@@ -566,7 +576,7 @@ content:
     type: options_select
     region: content
   field_slider_use_game_loader:
-    weight: 20
+    weight: 21
     settings:
       display_label: true
     third_party_settings: {  }
@@ -579,7 +589,7 @@ content:
     type: options_select
     region: content
   field_table_id:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
