--- a/web/sites/mobile-live-dealer/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-live-dealer/config/sync/core.entity_view_display.node.games.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.games.field_external_game_id
     - field.field.node.games.field_game_code
     - field.field.node.games.field_game_lobby
     - field.field.node.games.field_game_platform
@@ -40,6 +41,14 @@ targetEntityType: node
 bundle: games
 mode: default
 content:
+  field_external_game_id:
+    weight: 16
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_game_code:
     weight: 5
     label: above
