--- a/web/sites/games/config/sync/views.view.content.yml
+++ b/web/sites/games/config/sync/views.view.content.yml
@@ -559,6 +559,7 @@ display:
         groups:
           1: AND
       display_extenders: {  }
+      group_by: true
     display_plugin: default
     display_title: Master
     id: default
