--- a/web/sites/live-dealer/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/live-dealer/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_currency
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_enable_for_agent_players
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_external_game_id
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image
@@ -266,6 +267,14 @@ content:
           entity_type: webcomposer_slider_v2_entity
           bundle: webcomposer_slider_v2_entity
     type: options_select
+    region: content
+  field_external_game_id:
+    weight: 24
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_game_launching:
     weight: 3
