--- a/web/sites/777baby-casino/config/sync/lucky_baby_config.page_configuration.yml
+++ b/web/sites/777baby-casino/config/sync/lucky_baby_config.page_configuration.yml
@@ -7,6 +7,7 @@ games: ''
 registration: ''
 registration_step2: ''
 registration_step3: ''
+registration_step4: ''
 contact_us: ''
 jackpot: ''
 faq: ''
