--- a/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.promo_banner_game_launch.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.promo_banner_game_launch.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.promo_banner_game_launch.field_field_table_id
+    - field.field.paragraph.promo_banner_game_launch.field_external_game_id
     - field.field.paragraph.promo_banner_game_launch.field_game_code
     - field.field.paragraph.promo_banner_game_launch.field_game_platform
     - field.field.paragraph.promo_banner_game_launch.field_game_provider
@@ -22,9 +22,9 @@ third_party_settings:
       children:
         - field_game_code
         - field_game_platform
-        - field_field_table_id
         - field_game_provider
         - field_game_subprovider
+        - field_external_game_id
         - field_use_lobby
       parent_name: ''
       weight: 2
@@ -40,8 +40,8 @@ targetEntityType: paragraph
 bundle: promo_banner_game_launch
 mode: default
 content:
-  field_field_table_id:
-    weight: 11
+  field_external_game_id:
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -63,13 +63,13 @@ content:
     type: options_select
     region: content
   field_game_provider:
-    weight: 12
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_subprovider:
-    weight: 13
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
