--- a/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.game_list.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.game_list.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.game_list.field_external_game_id
     - field.field.paragraph.game_list.field_game_code
     - field.field.paragraph.game_list.field_game_image
     - field.field.paragraph.game_list.field_game_platform
@@ -10,7 +11,7 @@ dependencies:
     - field.field.paragraph.game_list.field_game_subprovider
     - field.field.paragraph.game_list.field_game_title
     - field.field.paragraph.game_list.field_product
-    - field.field.paragraph.game_list.field_table_id
+    - field.field.paragraph.game_list.field_provider2
     - field.field.paragraph.game_list.field_target
     - field.field.paragraph.game_list.field_use_game_loader
     - field.field.paragraph.game_list.field_use_lobby
@@ -23,6 +24,14 @@ targetEntityType: paragraph
 bundle: game_list
 mode: default
 content:
+  field_external_game_id:
+    weight: 13
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_game_code:
     weight: 11
     label: above
@@ -77,14 +86,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
-    region: content
-  field_table_id:
-    weight: 13
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
   field_target:
     weight: 3
