--- a/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.promo_banner_game_launch.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.promo_banner_game_launch.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.promo_banner_game_launch.field_field_table_id
+    - field.field.paragraph.promo_banner_game_launch.field_external_game_id
     - field.field.paragraph.promo_banner_game_launch.field_game_code
     - field.field.paragraph.promo_banner_game_launch.field_game_platform
     - field.field.paragraph.promo_banner_game_launch.field_game_provider
@@ -21,8 +21,8 @@ targetEntityType: paragraph
 bundle: promo_banner_game_launch
 mode: default
 content:
-  field_field_table_id:
-    weight: 5
+  field_external_game_id:
+    weight: 9
     label: above
     settings:
       link_to_entity: false
@@ -61,7 +61,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_title:
-    weight: 9
+    weight: 8
     label: above
     settings:
       link_to_entity: false
@@ -76,14 +76,14 @@ content:
     type: list_default
     region: content
   field_target:
-    weight: 8
+    weight: 7
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_use_game_loader:
-    weight: 7
+    weight: 6
     label: above
     settings:
       format: default
@@ -93,7 +93,7 @@ content:
     type: boolean
     region: content
   field_use_lobby:
-    weight: 6
+    weight: 5
     label: above
     settings:
       format: default
